Prussian Focus Stuff

--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -68,6 +68,8 @@
   PB_PRS_Hunt_The_Disloyal:0 "Hunt The Disloyal"
   PB_PRS_Reap_The_Rewards:0 "Reap The Rewards"
   PB_PRS_United_In_Blood:0 "United In Blood"
+  PB_Birthed_In_Fire:0 "Birthed In Fire"
+  PB_Birthed_In_Fire2:0 "Birthed In Fire"
 
   ##########################
   # DECISIONS
@@ -165,6 +167,7 @@
   prussia35tooltip:0 "Unlocks '§YNew Ministers§!'."
   PRS_stage_one_done:0 "Stage One Of The Renovations Is Complete"
   PRS_stage_two_done:0 "Stage Two Of The Renovations Is Complete"
+
   ##########################
   # EVENTS
   ##########################
@@ -192,9 +195,8 @@
   prussia7opta:0 "Lets See Where This Goes"
   prussia8title:0 "A World Of Economics"
   prussia8desc:0 "The first topic and the most important of all was economics and how the Prussian state would continue to develop its European standing through commerce. A fierce battle between politicians and suits ensued in the conference room and many believed to harbour the right answer for such a question. Nationalists, bureaucrats, and militarists all promised efficency and prosperity but the real question was who was telling the truth.\n\nOnly time could tell." 
-  prussia8opta:0 "Promote Capitalism And Big Business"
-  prussia8optb:0 "Local Markets Are Preferable"
-  prussia8optc:0 "Government Owned And Funded"
+  prussia8opta:0 "Local Markets Are Preferable"
+  prussia8optb:0 "Government Owned And Funded"
   prussia9title:0 "A World Of Customs"
   prussia9desc:0 "Second on the discussion list was the ethnicity issue within Prussia, a hot topic that birthed radical opinions and radical suggestions. Most of the conference bloc was pro-unity, even those in the Vaterland Front but many still spoke about the negative effects of cultral mixing pointing at the Roman Empire as an example. Those who had stayed neutral on the topic wished to please both parties but unfortunately today that wasn't an option.\n\nWhen Bouhler presented himself behind the poduim he pronounced only one word." 
   prussia9opta:0 "Unity!"
@@ -271,12 +273,11 @@
   prussia30desc:0 "" 
   prussia30opta:0 "Remember, Quality Over Quantity"
 
-
   ##########################
   # FOCUS
   ##########################
  
-  PRS_a_trip_through_konigsberg:0 "A Trip Through §LKönigsberg§!"
+  PRS_a_trip_through_konigsberg:0 "A Trip Through Königsberg"
   PRS_a_trip_through_konigsberg_desc:0 "You know Steiner, its not the thick, chock inducing smokey grey air that reminds that I live in Königsberg. No, its the peaceful clean streets and the abundance of eagle like statues that does."
   PRS_issues_of_the_state:0 "Issues Of The State"
   PRS_issues_of_the_state_desc:0 ""
@@ -364,6 +365,61 @@
   PRS_unstoppable_threat:0 "Unstoppable Threat"
   PRS_streamlined_production_lines:0 "Streamlined Production Lines"
   PRS_on_the_offensive:0 "On The Offensive"
+  PRS_to_rule_the_skies:0 "To Rule The Skies"
+  PRS_fighter_focus:0 "Fighter Focus"
+  PRS_air_superiority:0 "Air Superiority"
+  PRS_conquest_doctrines:0 "Conquest Doctrines"
+  PRS_bomber_focus:0 "Bomber Focus"
+  PRS_ground_support:0 "Ground Support"
+  PRS_anti_air_emplacements:0 "Anti-Air Emplacements"
+  PRS_airport_expansions:0 "Airport Expansions"
+  PRS_suicidal_pilots:0 "Suicidal Pilots"
+  PRS_ace_initiative:0 "Ace Initiative"
+  PRS_plan_eden:0 "Plan Eden"
+  PRS_lay_the_foundations:0 "Lay The Foundations"
+  PRS_industrialize_the_wastes:0 "Industrialize The Wastes"
+  PRS_conference_conclusions:0 "Conference Conclusions"
+  PRS_connect_the_towns:0 "Connect The Towns"
+  PRS_end_the_brain_drain:0 "End The Brain Drain"
+  PRS_city_construction_efforts:0 "City Construction Efforts"
+  PRS_harbour_expansions:0 "Harbour Expansions"
+  PRS_synthetic_processing:0 "Synthetic Processing"
+  PRS_state_owned_and_controlled:0 "State Owned And Controlled"
+  PRS_government_expenditures:0 "Government Expenditures"
+  PRS_heavy_industry_planning:0 "Heavy Industry Planning"
+  PRS_keep_the_furnaces_burning:0 "Keep The Furnaces Burning"
+  PRS_military_contracts:0 "Military Contracts"
+  PRS_urbanisation_plans:0 "Urbanisation Plans"
+  PRS_all_is_ours:0 "All Is Ours"
+  PRS_total_war:0 "Total War"
+  PRS_open_the_stockpiles:0 "Open The Stockpiles"
+  PRS_recruit_the_unable:0 "Recruit The Unable"
+  PRS_salvage_campaigns:0 "Salvage Campaigns"
+  PRS_the_end_of_time:0 "The End Of Time"
+  PRS_a_dire_situation:0 "A Dire Situation"
+  PRS_what_we_must:0 "What We Must"
+  PRS_mobolize_the_workers:0 "Mobolize The Workers"
+  PRS_focus_on_the_civilian_sector:0 "Focus On The Civilian Sector"
+  PRS_war_on_waste:0 "War On Waste"
+  PRS_new_homes:0 "New Homes"
+  PRS_fill_the_factories:0 "Fill The Factories"
+  PRS_self_sufficiency:0 "Self Sufficiency"
+  PRS_local_monopolies:0 "Local Monopolies"
+  PRS_subsidize_the_profitable:0 "Subsidize The Profitable"
+  PRS_liquidate_the_money_wasters:0 "Liquidate The Money Wasters"
+  PRS_made_in_prussia:0 "Made In Prussia"
+  PRS_new_markets:0 "New Markets"
+  PRS_sell_sell_sell:0 "Sell Sell Sell"
+  PRS_local_first:0 "Local First"
+  PRS_incentivize_spending:0 "Incentivize Spending"
+  PRS_focus_on_quantity:0 "Focus On Quantity"
+  PRS_focus_on_quality:0 "Focus On Quality"
+  PRS_encourage_community_development:0 "Encourage Community Development"
+  PRS_monopolize_the_great_slump:0 "Monopolize The Great Slump"
+  PRS_let_the_money_flow:0 "Let The Money Flow"
+  PRS_times_of_strife:0 "Times Of Strife"
+  PRS_what_we_need:0 "What We Need"
+  PRS_aluminium_plants:0 "Aluminium Plants"
 
   ##########################
   # Ministers/Generals/Tech Teams
