most of TCW setup

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -20,7 +20,7 @@
   TUR_ni_party_long:0 "The Turanist League"
 
   ##########################
-  # PARTIES
+  # NAMES
   ##########################
   TUR_ni:0 "Ottoman Empire"
   TUR_ni_DEF:0 "The Ottoman Empire"
@@ -46,6 +46,30 @@
   TUR_ds_ADJ:0 "Turkish"
   TUR_cn_ADJ:0 "Turkish"
   TUR_an_ADJ:0 "Turkish"
+  OTT_Loyalists_ni:0 "Ottoman Loyalists"
+  OTT_Loyalists_ni_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_ds:0 "Ottoman Loyalists"
+  OTT_Loyalists_ds_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_rc:0 "Ottoman Loyalists"
+  OTT_Loyalists_rc_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_an:0 "Ottoman Loyalists"
+  OTT_Loyalists_an_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_cn:0 "Ottoman Loyalists"
+  OTT_Loyalists_cn_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_lb:0 "Ottoman Loyalists"
+  OTT_Loyalists_lb_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_ss:0 "Ottoman Loyalists"
+  OTT_Loyalists_ss_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_jc:0 "Ottoman Loyalists"
+  OTT_Loyalists_jc_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_ni_ADJ:0 "Turkish"
+  OTT_Loyalists_rc_ADJ:0 "Turkish"
+  OTT_Loyalists_lb_ADJ:0 "Turkish"
+  OTT_Loyalists_ss_ADJ:0 "Turkish"
+  OTT_Loyalists_jc_ADJ:0 "Turkish"
+  OTT_Loyalists_ds_ADJ:0 "Turkish"
+  OTT_Loyalists_cn_ADJ:0 "Turkish"
+  OTT_Loyalists_an_ADJ:0 "Turkish"
 
   ##########################
   # MINISTERS
@@ -72,7 +96,10 @@
   PB_TUR_Caliph_of_Islam:0 "The Caliph of Islam"
   PB_TUR_Caliph_of_Islam_desc:0 "Despite a myriad of social, economic and political problems, the Ottoman Caliph still remains the de-facto head of the Islamic faith. This legitimacy is one of the few sinews holding Turkish society together, however the Ottoman loss of the Islamic holy sites in Arabia was a massive blow to the religious legitimacy of the Caliph. It is not uncommon for many Muslims abroad to look to Istanbul for guidance, but many have begun to turn their attention towards those who hold Mecca, the Arabians."
   PB_TUR_istanbul_riots:0 "The Istanbul Riots"
-  PB_TUR_Turkish_Civil_War:0 "The Turkish Civil War"
+  PB_TUR_desperate_battle1:0 "Desperate Battle"
+
+  PB_TUR_turkish_spring1:0 "The Turkish Spring"
+
   PB_TUR_Turkish_Civil_War_Recovery:0 "Recovering from the Civil War"
   TUR_five_year_plan_preperation_idea:0 "Five Year Plan Prepeation"
   TUR_five_year_plan_idea:0 "The Turkish Five Year Plan"
@@ -166,7 +193,9 @@
   PB_TUR_issue_new_currency_tt:0 "§YThe Recovery will increase by §!§G45%§!\n§YThe People's happiness will decrease by §!§R60%§!"
   PB_TUR_create_turkish_worker_regiment_tt:0 "§YThe Recovery will increase by §!§G10%§!\n§YThe People's happiness will decrease by §!§R15%§!"
   PB_TUR_get_rid_of_the_regiments_tt:0 "§YThe Recovery will decrease by §!§R20%§!\n§YThe People's happiness will decrease by §!§G25%§!"
+  PB_TUR_deregulate_the_economy_tt:0 "§YThe Recovery will increase by §!§G15%§!\n§YThe People's happiness will decrease by §!§R10%§!"
   PB_TUR_regulate_the_economy_tt:0 "§YThe Recovery will decrease by §!§R10%§!\n§YThe People's happiness will increase by §!§G15%§!"
+
   
 
   ##########################
