--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -3013,10 +3013,10 @@
  KRD_cn_DEF:0 "Malikate of Kurdistan"
  KRD_lb:0 "Malikate of Kurdistan"
  KRD_lb_DEF:0 "Malikate of Kurdistan"
- KRD_ss:0 "Malikate of Kurdistan"
- KRD_ss_DEF:0 "Malikate of Kurdistan"
+ KRD_ss:0 "Kurdistan"
+ KRD_ss_DEF:0 "The People's Democratic Republic of Kurdistan"
  KRD_jc:0 "People's Democratic Republic of Kurdistan"
- KRD_jc_DEF:0 "People's Democratic Republic of Kurdista"
+ KRD_jc_DEF:0 "People's Democratic Republic of Kurdistan"
  KRD_ni_ADJ:0 "Kurdish"
  KRD_rc_ADJ:0 "Kurdish"
  KRD_lb_ADJ:0 "Kurdish"
@@ -3025,6 +3025,10 @@
  KRD_ds_ADJ:0 "Kurdish"
  KRD_cn_ADJ:0 "Kurdish"
  KRD_an_ADJ:0 "Kurdish"
+ KRD_ss_party:0 "Eniya Revolutionoreşa Kurd - Moderat"
+ KRD_ss_party_long:0 "The Kurdish Revolutionary Front - Moderate"
+ KRD_jc_party:0 "Eniya Revolutionoreşa Kurd - Radîkal"
+ KRD_jc_party_long:0 "The Kurdish Revolutionary Front - Radical"
 
  ULS_ni:0 "Free Ulster"
  ULS_ni_DEF:0 "Free Ulster"
@@ -4319,22 +4323,22 @@ SAN_jc:0 "Sanghli State"
  WLS_cn_ADJ:0 "Welsh"
  WLS_an_ADJ:0 "Welsh"
 
- ARM_ni:0 "Republic of Armenia"
- ARM_ni_DEF:0 "Republic of Armenia"
- ARM_ds:0 "Republic of Armenia"
- ARM_ds_DEF:0 "Republic of Armenia"
- ARM_rc:0 "Republic of Armenia"
- ARM_rc_DEF:0 "Republic of Armenia"
- ARM_an:0 "Republic of Armenia"
- ARM_an_DEF:0 "Republic of Armenia"
- ARM_cn:0 "Republic of Armenia"
- ARM_cn_DEF:0 "Republic of Armenia"
- ARM_lb:0 "Republic of Armenia"
- ARM_lb_DEF:0 "Republic of Armenia"
- ARM_ss:0 "Republic of Armenia"
- ARM_ss_DEF:0 "Republic of Armenia"
- ARM_jc:0 "Republic of Armenia"
- ARM_jc_DEF:0 "Republic of Armenia"
+ ARM_ni:0 "Armenia"
+ ARM_ni_DEF:0 "Free Armenia"
+ ARM_ds:0 "Armenia"
+ ARM_ds_DEF:0 "Free Armenia"
+ ARM_rc:0 "Armenia"
+ ARM_rc_DEF:0 "Free Armenia"
+ ARM_an:0 "Armenia"
+ ARM_an_DEF:0 "Free Armenia"
+ ARM_cn:0 "Armenia"
+ ARM_cn_DEF:0 "Free Armenia"
+ ARM_lb:0 "Armenia"
+ ARM_lb_DEF:0 "Free Armenia"
+ ARM_ss:0 "Armenia"
+ ARM_ss_DEF:0 "Free Armenia"
+ ARM_jc:0 "Armenia"
+ ARM_jc_DEF:0 "Free Armenia"
  ARM_ni_ADJ:0 "Armenian"
  ARM_rc_ADJ:0 "Armenian"
  ARM_lb_ADJ:0 "Armenian"
@@ -4343,6 +4347,8 @@ SAN_jc:0 "Sanghli State"
  ARM_ds_ADJ:0 "Armenian"
  ARM_cn_ADJ:0 "Armenian"
  ARM_an_ADJ:0 "Armenian"
+ ARM_cn_party:0 "Hayastani azatut’yun kusakts’ut’yun"
+ ARM_cn_party_long:0 "The Freedom Party of Armenia"
 
  XSM_ni:0 "Ma Family Clique"
  XSM_ni_DEF:0 "Ma Family Clique"
@@ -5895,21 +5901,21 @@ SAN_jc:0 "Sanghli State"
  HNK_an_ADJ:0 "Anglo-Cantonese"
 
  WTA_ni:0 "West Thrace"
- WTA_ni_DEF:0 "West Thrace"
+ WTA_ni_DEF:0 "The Neutral Zone of West Thrace"
  WTA_ds:0 "West Thrace"
- WTA_ds_DEF:0 "West Thrace"
+ WTA_ds_DEF:0 "The Neutral Zone of West Thrace"
  WTA_rc:0 "West Thrace"
- WTA_rc_DEF:0 "West Thrace"
+ WTA_rc_DEF:0 "The Neutral Zone of West Thrace"
  WTA_an:0 "West Thrace"
- WTA_an_DEF:0 "West Thrace"
+ WTA_an_DEF:0 "The Neutral Zone of West Thrace"
  WTA_cn:0 "West Thrace"
- WTA_cn_DEF:0 "West Thrace"
+ WTA_cn_DEF:0 "The Neutral Zone of West Thrace"
  WTA_lb:0 "West Thrace"
- WTA_lb_DEF:0 "West Thrace"
+ WTA_lb_DEF:0 "The Neutral Zone of West Thrace"
  WTA_ss:0 "West Thrace"
- WTA_ss_DEF:0 "West Thrace"
+ WTA_ss_DEF:0 "The Neutral Zone of West Thrace"
  WTA_jc:0 "West Thrace"
- WTA_jc_DEF:0 "West Thrace"
+ WTA_jc_DEF:0 "The Neutral Zone of West Thrace"
  WTA_ni_ADJ:0 "Ottoman-Thracian"
  WTA_rc_ADJ:0 "Ottoman-Thracian"
  WTA_lb_ADJ:0 "Ottoman-Thracian"
@@ -5918,6 +5924,8 @@ SAN_jc:0 "Sanghli State"
  WTA_ds_ADJ:0 "Ottoman-Thracian"
  WTA_cn_ADJ:0 "Ottoman-Thracian"
  WTA_an_ADJ:0 "Ottoman-Thracian"
+ WTA_ds_party:0 "Batı Trakya Tarafsız Komutanlığı"
+ WTA_ds_party_long:0 "The West Thrace Neutral Command"
 
  MNT_ni:0 "Montenegro"
  MNT_ni_DEF:0 "Montenegro"
