More Russian Stuff

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -260,6 +260,10 @@
   PBNews.65.d:0 ""
   PBNews.65.a:0 "Russia Continues To Burn"
 
+  PBNews.66.t:0 "The Red Revolution"
+  PBNews.66.d:0 ""
+  PBNews.66.a:0 "Dear Lord"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
