--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -3,7 +3,7 @@
   ##########################
   #Top Bar
   ##########################
-  RUS_Country_Desc_Topbar:0 "§YRussia§! is the undisputed hegemony in Eurasia in 1933.\n\nRussia has by far seen better days. Though a victor of the Great War this has ultimately amounted into minor gains in the form of territorial expansions. Unlike the then once believed idea that the war was some how going to fix the Russian bear's issues, this was false and folly.\n\n The incompetent Tsar as a result had retreated into a life of solitude, blaming all his failures on his once considered allies. Though there is still hope for the Russian people, With the Tsar now slowly dying a painiful death the political sphere has begun to shift, everyday a figure of great importance to the Tsar goes missing, a position in government is changed, and one less loyal individual gains power. All know what the outcome will be for the Tsar in the coming days, alive or not.\n\nTime will tell if Russia will once again ascend into glory or fall and crumble like many have before her.\n\nRussia is a §YMajor Power§!."
+  RUS_Country_Desc_Topbar:0 "§YRussia§! is the undisputed hegemony in Eurasia in 1933.\n\nRussia has by far seen better days. Though a victor of the Great War this has ultimately amounted into minor gains in the form of territorial expansions. Unlike the then once believed idea that the war was some how going to fix the Russian bear's issues, this was false and folly.\n\nThe incompetent Tsar as a result had retreated into a life of solitude, blaming all his failures on his once considered allies. Though there is still hope for the Russian people, With the Tsar now slowly dying a painiful death the political sphere has begun to shift, everyday a figure of great importance to the Tsar goes missing, a position in government is changed, and one less loyal individual gains power. All know what the outcome will be for the Tsar in the coming days, alive or not.\n\nTime will tell if Russia will once again ascend into glory or fall and crumble like many have before her.\n\nRussia is a §YMajor Power§!."
 
   ##########################
   # MINISTERS/LEADERS/Traits
@@ -80,6 +80,7 @@
   PB_RUS_German_Labour_Camps:0 "German Labour Camps"
   PB_RUS_German_Labour_Camps2:0 "German Labour Camps"
   PB_RUS_A_State_Under_Construction4:0 "The Police State"
+  PB_RUS_Absolute_Chaos:0 "Absolute Chaos"
 
   ## Ideas For The Russian Collapse ##
 
@@ -440,129 +441,39 @@
   russia116title:0 "The Fall Of Moscow"
   russia116desc:0 ""
   russia116opta:0 "Death To The Jacobins!"
+  russia117title:0 "An Ailing Tyrant"
+  russia117desc:0 ""
+  russia117opta:0 "His Days Are Numbered"
+  russia118title:0 "Mentally Unstable"
+  russia118desc:0 ""
+  russia118opta:0 "He Needs To Sit Down"
+  russia119title:0 "Rising Tensions"
+  russia119desc:0 ""
+  russia119opta:0 "We Must Prepare"
+  russia120title:0 "All Hands On Deck"
+  russia120desc:0 ""
+  russia120opta:0 "Hold On"
+  russia121title:0 "The First Duma Meeting"
+  russia121desc:0 ""
+  russia121opta:0 "We Will See How This Unfolds"
+  russia122title:0 "The Resolutions Act"
+  russia122desc:0 ""
+  russia122opta:0 "Cooperation Is Needed"  
+  russia122optb:0 "Death To The Radicals!"
+  russia123title:0 "Friday Night Killings"
+  russia123desc:0 ""
+  russia123opta:0 "They Deserved It" 
+  russia124title:0 "The Red Revolution"
+  russia124desc:0 ""
+  russia124opta:0 "God Help Us"   
 
   ##########################
   # TOOLTIPS n Shit
   ##########################  
-  RUS_No_Fail_State:0 "There Is No Fail State For This Decision/Mission"  
-  Cross_Loc_Dec:0 "Today births a new era of §RReligious Defeatism§!. Many identify as Non-religious, Governments are Secularizing, and many are leaning to more Progressive ideas. This ends now, this minute, this very second, the world will begin to feel a familiar return to traditional values. They may despise us now but they haven't seen the light yet, and when they do, it will be §YGlorious§!\n\n If Religious Fervour isn't at §Y100%§! by the end of the Liberal Agitation Mission, A loss Of Political Power, War Support, and Stability will follow"
-  TSAR_DEAD:0 "The Tsar Is Dead"
-  PAP_SECOND_ROME:0 "Third Roman Empire"
-  Pan_Slavia:0 "Pan-Slavia"
-  RUS_LON:0 "British Occupation Authority Of Northern Russia"
-  RET_AFRICA:0 "Russian Dominion Of East Africa"
-  GBW_Exists:0 "The Great Balkan War is occuring"
-  Tsar_Die:0 "The Tsar Dies"
-  Tsar_live:0 "The Tsar Survives"
-  Health_Bad:0 "The Tsar's Health Will Worsen"
-  Health_Good:0 "The Tsar's Health Will Improve"
-  RUS_Country_Desc_Topbar:0 ""
-  rus_attempt:0 "An assassination attempt has been made on the Tsar's life."
-  rus_attempt_state:0 "A §RNew Order§! awaits Europe. They shall run scared, tired, and ultimately defenseless."  
-  RUS_State:0 "Russian Imperiya"
-  RUS_Holy:0 "Holy Order Of Russia"
-  Russkiy_natsional'nyy_front:0 "Russkiy Natsional'nyy Front"
-  RUS_Russkiy_natsional'nyy_front:0 "Natsional'nyy Front"
-  russia2tooltip:0 "\n§B---Russia Will Forever Be Safe---§!"
-  russia3tooltip:0 "§gA cult of personality will develop around Pytor.§!"
-  russia4tooltip:0 "§R--The Party Will Unite Or Perish!--§!"
-  russia5tooltip:0 "§R--£decision_icon_small Stage Two Of Pyotr's Grand Plan Will Commence!--§!"
-  russia6tooltip:0 "§R--£decision_icon_small Stage Three Of Pyotr's Grand Plan Will Commence!--§!"
-  russia7tooltip:0 "Your persepective will be that of the loyalist faction"
-  russia8tooltip:0 "Your persepective will be that of the reformist faction"
-  russia9tooltip:0 "The Reformists will lose §G5§! Strength and the Loyalists will gain §R7§! Strength"
-  russia10tooltip:0 "The Reformists will gain §G4§! strength and the Loyalists will lose §R3§!"
-  russia11tooltip:0 "The Reformists will gain §G2§! strength and the Loyalists will lose §R1§!"
-  russia12tooltip:0 "The Reformists will gain §G4§! strength and the Loyalists will lose §R3§!"
-  russia13tooltip:0 "The Reformists will gain §G3§! strength and the Loyalists will lose §R2§!"
-  russia14tooltip:0 "The Reformists will gain §G6§! strength and the Loyalists will lose §R5§!"
-  russia15tooltip:0 "The Reformists will gain §R6§! strength and the Loyalists will lose §G4§!"
-  russia16tooltip:0 "The Reformists will lose §R1§! strength and the Loyalists will gain §G3§!"
-  Loyalist_Picked:0 "The Loyalists Have Been Picked"  
-  Reformist_Picked:0 "The Reformists Have Been Picked"
-  russia17tooltip:0 "The Reformists will lose §R4§! strength and the Loyalists will gain §G6§!"
-  russia18tooltip:0 "The Reformists will lose §R3§! strength and the Loyalists will gain §G5§!"
-  russia19tooltip:0 "The Reformists will lose §R2§! strength and the Loyalists will gain §G4§!"   
-  russia20tooltip:0 "The Reformists will lose §R2§! strength and the Loyalists will gain §G2§!"
-  russia21tooltip:0 "The Reformists will lose §R4§! strength and the Loyalists will gain §G6§!"
-  russia22tooltip:0 "\n§R---It His §RHighly Recommended That You Save PP For The Following Focus---§!"
-  russia23tooltip:0 "\n§C---Russia Will Look Towards The Future And Bathe In A New Golden Age---§!"
-  russia24tooltip:0 "The Four Year Plan Will Begin"
-  russia25tooltip:0 "Stage One Of The Four Year Plan Will Commence"
-  russia26tooltip:0 "Stage Two Of The Four Year Plan Will Commence"
-  russia27tooltip:0 "Stage Three Of The Four Year Plan Will Commence"
-  russia28tooltip:0 "Stage Four Of The Four Year Plan Will Commence"
-  RUS_Reformists:0 "The Reformists Have United The Party"
-  RUS_Loyalists:0 "The Loyalists Have United The Party"
-  russia29tooltip:0 "Various states will receive infrastructure improvements"
-  russia30tooltip:0 "\nA series of events will play out regarding the §YTsar's§! health"
-  russia31tooltip:0 "The Tsar will have to wait a while for his medicine. How unfortunate."
-  tension_RUS.1.t:0 "A Not So Royal Russia" 
-  tension_RUS.2.t:0 "Off With Their Heads!"
-  Winter_War:0 "The Winter War Has Started"
-  China_Collapse:0 "China Has Collapsed"
-  RUS_WW2:0 "Europe Is Alight"
-  russia32tooltip:0 "§RWe Will Begin An Age Of Expansion§!"
-  russia33tooltip:0 "Tell the doctors to hurry up!"
-  russia34tooltip:0 "______________________________________________ In this new world weakness is put first. Long have gone the days of old where only the strongest survived, the smartest adapted, and the inferior fell. Though there is still a chance to revert this poised creation. Though the means of doing so will be considered, inhuman."
-  russia35tooltip:0 "\nCome now child, look, what do you see? I see a future, one morphed by the blood, sweat, and tears of your fellow Russian."
-  russia36tooltip:0 "\nOnly the disloyal should fear us."
-  russia37tooltip:0 "\nTo ensure the stability and prosperity of our glorious realm we must rightly punish those that have done wrong."
-  russia38tooltip:0 "\nA promise of absolute loyalty from its citizens is all the state asks for."
-  russia39tooltip:0 "The §YRenewed Imperialism§! £decision_icon_small Decisions Will Become Available"
-  RUS_Military_Government:0 "Russian Emergency Military Government"
-  russia40tooltip:0 "You will recieve 1 off-map §Ycivilian factory§! for every §YDominion§! who has an opinion of §YRussia§! that is greater than §G80§!. This also applies to §YPrussia§!, §YFrance§!, and §YItaly§!."
-  russia41tooltip:0 "\nThe time has come to rid Russia of her historical stains. While kings and queens may have proved useful around times of horse and cart todays era is different. Todays Russian wants safety and order and that they shall have, no matter the cost."
-  russia42tooltip:0 "Down with the old, up with the new!"
-  russia43tooltip:0 "______________________________________________Various §YEvents§! will fire throughout your playthrough in line with this political path."
-  russia44tooltip:0 "§R----Our Nation Is Experiencing Violent levels Of Unrest And Turmoil, A Solution Best Be Found Soon!----§!\n§W--------------§!"
-  russia45tooltip:0 "§W--------------§!\nA §YEvent§! Will Fire Which Will Dictate Your Political Path"
-  russia46tooltip:0 "We Will Build A Society Free Of §RSin§!\n§W--------------§!\nIf §TRussia's§! Stability Drops Below §R40%§! And Isn't Dealt With Fast A §RPermanent Debuff§! Will Follow As Well As The Loss Of §CThe Foundations Of A Utopia Idea§!\n§W--------------§!"
-  russia47tooltip:0 "We Will Build A Society Free Of §RWant§!\n§W--------------§!\nStability Will Permanently Be At §RZero§! Though A §CNational Spirit§! Will Be Granted To Counter The §RDebuffs§! Associated With The Latter\n§W--------------§!\nYou Will Be Required To Spend §Y200§! Political Power £GFX_pol_power  Every Year To Keep This System Of Governance Sustained, Failure To Do So Will Be §RGame Ending§!\n§W--------------§!"
-  russia48tooltip:0 "A Variety Of §YGenerals§! And §YMinisters§! Will Be §RPurged§! In The Name Of Russia! Innocent And Loyal Individuals May Die"
-  russia49tooltip:0 "§YPyotr Wrangel§! gains:\n   §YOkhrana Connections§!\n   - Resistance Target §G-5%§!"
-  russia50tooltip:0 "Various §YDecisions £decision_icon_small §! Will Become Available Under The §YRenewed Imperialism Decision Category§!"
-  ASK_North_America:0 "Russian Dominion Of North America"
-  russia51tooltip:0 "§YNovorossiya§! will be known as the §YRussian Dominion Of North America§!"
-  russia52tooltip:0 "§W--------------§!\nYour Military Modernization Will §GLargely Increase§! For Every Nation That Agrees To Participate In The §YWar Games§!"
-  RUS_CHAOS:0 "Russia Is In Shambles"
-  russia53tooltip:0 "The Reformists Lowering Loyalist Strength"
-  russia54tooltip:0 "The Reformists Gaining A Moderate Amount Of Strength"
-  russia55tooltip:0 "The Reformists Gaining A Large Amount Of Strength"
-  russia56tooltip:0 "The Loyalists Lowering Reformist Strength"
-  russia57tooltip:0 "The Loyalists Gaining A Moderate Amount Of Strength"
-  russia58tooltip:0 "The Loyalists Gaining A Large Amount Of Strength"
-  Reformists_50:0 "Reformists Have More Than 50 Power Strength"
-  Reformists_50_Lower:0 "The Reformists Will Lose 20 Faction Strength"
-  Loyalists_50_Lower:0 "The Loyalists Will Lose 20 Faction Strength"
-  RUS_Political_Change:0 "The Political Crisis Will Be Resolved"
-  RUS_SCALES_AVOID:0 "The Political Crisis Has Been Avoided"
-  russia59tooltip:0 "§R------The Third Roman Empire Will Be Announced To The World------§!"
-  russia60tooltip:0 "§R------Pan-Slavia Will Be Announced To The World------§!"
-  russia61tooltip:0 "§YRussian Eritrea§! will be known as the §YRussian Dominion Of East Africa§!"
-  russia62tooltip:0 "Religious Fervour Will §GIncrease§!"
-  russia63tooltip:0 "You Will Not Be Able To Select Any Decisions For The Duration Of This Decsion"
-  russia64tooltip:0 "Religious Fervour Will Largely §GIncrease§!"
-  russia65tooltip:0 "Religious Fervour Will Slightly §GIncrease§!"
-  russia66tooltip:0 "If Religious Fervour Is At Less Than §Y100%§! Then Religious Fervour Will Largely §RDecrease§! And Some Debuffs Will Be Granted\n\nIf Religious Fervour Is At §Y100%§! Then Religious Fervour Will Be Set Back To §Y50%§! And All Debuffs Will Be Avoided\n\n§R--This Applies Every Year--§!"
-  PB_RUS_Increase_Fervour:0 "A Decision Isn't Currently Active Or Religious Fervour Isn't At §Y100%§!"
-  russia67tooltip:0 "§W--------------§!\nIf Russia Or The Berlin Administration Owns Schleswig-Holstein Forts Will Also Be Built There"
-  russia68tooltip:0 "§W--------------§!\nWrangel Will Save Russia From Its Greatest Enemy; Its Self"
-  russia69tooltip:0 "§W--------------§!\nIf Portugal Accepts Somalia Will Be Transfered To Eritrea - Russian East Africa" 
-  russia70tooltip:0 "§W--------------§!\nThe Divine Will Save Russia From Its Greatest Enemy; Non-believers"
-  russia71tooltip:0 "Russia Will Henceforth Be Known As The §YEurasian Holy Order§!"
-  russia72tooltip:0 "The §YDivinity§! Focus Tree Will Be Unlocked"
-  RUS_HOLY:0 "Eurasian Holy Order"
-  russkaya_monasheskaya_teokratiya:0 "Monasheskaya Teokratiya"
-  RUS_russkaya_monasheskaya_teokratiya:0 "Russkaya Monasheskaya Teokratiya"
-  russia73tooltip:0 "Russia Will Henceforth Be Known As The §YRussian Imperiya§!"
-  russia74tooltip:0 "The §YPurpose§! Focus Tree Will Be Unlocked"
-  neoimperialisticheskaya_partiya:0 "Neo-Imperialisticheskaya Partiya"
-  RUS_neoimperialisticheskaya_partiya:0 "Rossiyskaya Neo-Imperialisticheskaya Partiya"
-  russia75tooltip:0 "The Loyalists Will §RGain§! Power"
-  russia76tooltip:0 "The Loyalists Will §GLose§! Power"
-  russia77tooltip:0 "The Reformists Will §RGain§! Power"
-  russia78tooltip:0 "The Reformists Will §GLose§! Power"
+  russia1tooltip:0 "Don't know why you would want the Tsar to stay alive but beats me"  
+  russia2tooltip:0 "The Revolution will begin!"
+  russia3tooltip:0 "The Moscow Jacobins revolt power will decrease by §G6%§!"
+  russia84tooltip:0 "The Moscow Jacobins will revolt!"
   russia79tooltip:0 "The Moscow Jacobins presence will decrease by §G5%§!"
   russia80tooltip:0 "The Moscow Jacobins presence will decrease by §G2%§! and will lose §G2%§! revolt power"
   russia81tooltip:0 "The Moscow Jacobins presence will decrease by §G8%§!"
@@ -573,18 +484,25 @@
   russia85tooltip:0 "The Moscow Jacobins will be defeated"
   russia86tooltip:0 "Moscow will fall to Jacobin hands and the only way to reclaim it will be through war"
   MOS_JAC:0 "Moscow Jacobins"
-  russia87tooltip:0 "In The Case Of An All Out Revolt §YTsaritsyn§! Will Remain Under Our Control"
-  russia88tooltip:0 "In The Case Of An All Out Revolt §YPetrograd§! Will Remain Under Our Control"
-  russia89tooltip:0 "New £decision_icon_small §YDecisions§! Will Be Unlocked For Dealing With The Moscow Riots"
-  russia90tooltip:0 "We Must Preemptively Secure Other Major Cities To Prevent A Further Spread Of The Riots"
-  russia91tooltip:0 "We Must Remind The People Of The Jacobin Threat"
-  russia92tooltip:0 "We Must Safeguard Those Who Are Loyal"
-  russia93tooltip:0 "We Must Deescalate The Riots Else Face Total Unrest"
-  russia94tooltip:0 "§RIf They Want War, They Shall Have It!§!\n\nThis Will Trigger The Revolt"
-  russia95tooltip:0 "£decision_icon_small §YDecisions§! Will Be Unlocked To Rebuild Moscow And Any Other Affected Cities"
 
 
-
+  ########################## 
+  # Decisions
+  ##########################
+  PB_RUS_Tsar_Health:0 "An Ailing Tyrant"
+  PB_RUS_Tsar_Health_desc:0 "His days are numbered and his grip on Russia is weakening, and eventually the Caeser of Slavs will die in a pool of piss or poision. When such an outcome occurs the whole nation will be halted to a standstill and the fires of radicalism will begin to fester. "
+  RUS_death:0 "The End Of An Era"
+  RUS_death_desc:0 "Tsar Nicholas will eventually pass in due time." 
+  PB_RUS_Moscow_Riots:0 "The Moscow Riots"
+  PB_RUS_Moscow_Riots_desc:0 ""\n\n\n\n\n\nThe Moscow Riots are a collection of violent protests that while first originating in Moscow, aren't limited to it, but instead named to universally describe the chaos that unfolded in the russian industrial complexes of Moscow, Petrograd, and Tsaritsyn.\n\nNow a game of cat and mouse plays out, with the local garrison trying to quell the unrest with sheer brutality whilst the local liberal-jacobins try to establish communal districts. Its a violent war on the streets and in politics and many are going to die.\n\nBoy is Russia a mess.\n\nThe presence of the Moscow Jacobins is at §Y[?RUS.Moscow_Jacobin]%§!\n\nTheir revolt power is at §Y[?RUS.Moscow_Jacobin_Revolt]%§!"
+  RUS_Jacobin_Maneuvers:0 "The Red Revolution"
+  RUS_shoot_the_agitators:0 "Shoot The Agitators"
+  RUS_raid_cell:0 "Raid Cell"
+  RUS_assassinate_jacobin_leader:0 "Assassinate Jacobin Leader"
+  RUS_burn_communes:0 "Burn Communes"
+  RUS_escalate_street_fighting:0 "Escalate Street Fighting"
+  RUS_purge_the_ranks:0 "Purge The Ranks"
+  RUS_raise_loyal_militias:0 "Raise Loyal Militias"
 
   ########################## 
   # FOCUS
@@ -604,7 +522,25 @@
   RUS_Assassinate_Local_Leaders:0 "Assassinate Local Leaders"
   RUS_Perform_Midnight_Raids:0 "Perform Midnight Raids"
   RUS_Friday_Night_Killings:0 "Friday Night Killings"
-
+  RUS_The_End_Of_An_Era:0 "The End Of An Era"
+  RUS_The_Days_Following:0 "The Days Following"  
+  RUS_A_World_Of_Issues:0 "A World Of Issues"
+  RUS_Hold_The_Ceremony:0 "Hold The Ceremony"
+  RUS_Long_Live_The_Empire:0 "Long Live The Empire"
+  RUS_The_Reactionary_State:0 "The Reactionary State"
+  RUS_The_Price_For_Piety:0 "The Price For Piety"
+  RUS_An_Overstretched_Ethno_State:0 "An Overstretched Ethno State"
+  RUS_The_Black_Hundreds_Scourge:0 "The Black Hundreds Scourge"
+  RUS_Political_Collapse:0 "Political Collapse"
+  RUS_The_Duma_Commands_All:0 "The Duma Commands All"
+  RUS_An_Ailing_Tyrant:0 "An Ailing Tryant"
+  RUS_Insane_Decisions_In_An_Insane_World:0 "Insane Decisions In An Insane World"
+  RUS_Every_Second_Matters:0 "Every Second Matters"
+  RUS_Hurry_Up_And_Die:0 "Hurry Up And Die"
+  RUS_Delay_The_Shipments:0 "Delay The Shipments"
+  RUS_An_Ending_At_Midnight:0 "An Ending At Midnight"
+  PB_Russia_Post_Tsar_Death:0 "Post Tsar Death Tree"
+  PB_Russia_Moscow_Riots:0 "Moscow Riots Tree"
 
   ##########################
   # Party Loyalty Mechanic n shit
