--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -6916,8 +6916,8 @@ SAN_jc:0 "Sanghli State"
  SRU_lb_DEF:0 "British Mandate Of Tsaritsyn"
  SRU_ss:0 "British Mandate Of Tsaritsyn"
  SRU_ss_DEF:0 "British Mandate Of Tsaritsyn"
- SRU_jc:0 "British Mandate Of Tsaritsyn"
- SRU_jc_DEF:0 "British Mandate Of Tsaritsyn"
+ SRU_jc:0 "Volgograd Jacobin Revolt"
+ SRU_jc_DEF:0 "Volgograd Jacobin Revolt"
  SRU_ni_ADJ:0 "Russian"
  SRU_rc_ADJ:0 "Russian"
  SRU_lb_ADJ:0 "Russian"
@@ -6941,8 +6941,8 @@ SAN_jc:0 "Sanghli State"
  MOS_lb_DEF:0 "British Mandate Of Moscow"
  MOS_ss:0 "British Mandate Of Moscow"
  MOS_ss_DEF:0 "British Mandate Of Moscow"
- MOS_jc:0 "British Mandate Of Moscow"
- MOS_jc_DEF:0 "British Mandate Of Moscow"
+ MOS_jc:0 "Moscow Jacobin Revolt"
+ MOS_jc_DEF:0 "Moscow Jacobin Revolt"
  MOS_ni_ADJ:0 "Russian"
  MOS_rc_ADJ:0 "Russian"
  MOS_lb_ADJ:0 "Russian"
@@ -6966,8 +6966,8 @@ SAN_jc:0 "Sanghli State"
  PET_lb_DEF:0 "German Mandate Of Petrograd"
  PET_ss:0 "German Mandate Of Petrograd"
  PET_ss_DEF:0 "German Mandate Of Petrograd"
- PET_jc:0 "German Mandate Of Petrograd"
- PET_jc_DEF:0 "German Mandate Of Petrograd"
+ PET_jc:0 "Petrograd Jacobin Revolt"
+ PET_jc_DEF:0 "Petrograd Jacobin Revolt"
  PET_ni_ADJ:0 "Russian"
  PET_rc_ADJ:0 "Russian"
  PET_lb_ADJ:0 "Russian"
