RIP My Beautiful Boy

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -541,6 +541,9 @@
   RUS_An_Ending_At_Midnight:0 "An Ending At Midnight"
   PB_Russia_Post_Tsar_Death:0 "Post Tsar Death Tree"
   PB_Russia_Moscow_Riots:0 "Moscow Riots Tree"
+  RUS_Stories_For_The_Children:0 "Stories For The Children"
+  RUS_A_Nation_In_Chaos:0 "A Nation In Chaos"
+  RUS_The_Barbarians_Of_Hell:0 "The Barbarians Of Hell"
 
   ##########################
   # Party Loyalty Mechanic n shit
