Just a quick update

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -101,15 +101,19 @@
   PB_ENG_WUP_Placate_Hardliners:0 "Placate the Hardliners"
   PB_ENG_WUP_Placate_Hardliners_desc:0 "Many radicals in the party helped the WUP achieve Downing street and in turn we shall accept some demands of these 'Hardline' Mp's. Many of our moderate compatriots and our colleagues in the British political spectrum will call us out on bending the knee to these hardline revoultionaries but the WUP is a party which rewards those who have earned it and these hardliners have earned it."
   PB_ENG_WUP_Empower_Bakuninists:0 "Align with the Bakuninists"
+  PB_ENG_WUP_Empower_Bakuninists_desc:0 "Bakunisim is one of the oldest socialist ideologies in the world and one with large influence in the Workers Union Party. To achieve our socialist Utopia we must align with these Bakuninists to help bring about the social reform and society revolution needed in the Britain." 
   PB_ENG_WUP_Women_Workers:0 "Women in the Workplace"
+  PB_ENG_WUP_Women_Workers_desc:0 "It is rare for a Woman to work in a factory or any kind of respectable occupation in this country. With Britain losing it's global market share in the world economy due to the loss of output compared to other nations we cannot allow ourselves to keep what seems to be half of our workshop at home. To combat this we shall start implementing social reform and laws to ease the fairer sex into the labour market."
   PB_ENG_WUP_National_Industrial_Plan:0 "The National Industrial Plan"
   PB_ENG_WUP_Mosley_Puppet:0 "A Useful Idiot"
+  PB_ENG_WUP_Mosley_Puppet_desc:0 
   PB_ENG_WUP_Experiment_Communes:0 "Experiment with Communes"
   PB_ENG_WUP_Colonial_Education_Bureau:0 "Colonial Education Bureau"
   PB_ENG_WUP_Way_of_the_Future:0 "The Way of the Future"
   PB_ENG_WUP_Pollitt_Betrayal:0 "And You, Mosley?"
   PB_ENG_WUP_Purge_Mosley:0 "The Fall of the Red Right Hand"
   PB_ENG_WUP_Attlee_Consolidated:0 "The New Jerusalem"
+  PB_ENG_WUP_Attlee_Consolidated_desc:0 
   PB_ENG_WUP_Politt_Consolidated:0 "The Pollittburo"
 
   PB_ENG_NPP_Victory:0 "A National People's Victory"
